--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
 	<!-- Note that all filenames use lowercase and no spaces; profile icon -->
 	<link rel="icon" type="image/png" href="images/Bel pfp.png"> 
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/homepage.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/site.css">
 	<!-- Link to javascript file - DEFER waits until all elements are rendered deleted from template: type="text/javascript" -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" intergrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<!-- This title is used for tabs and bookmarks -->
 	<title>Michelle Wang | Concept Art</title>
-  	<link rel="canonical" href="https://github.com/aikoijin/portfolio.git"/>
+  	<link rel="canonical" href="https://aikoijin.github.io/portfolio/"/>
 
 	<!--The meta elements of this document describe the document and its keywords.-->
   	<meta property="og:title" content="Michelle Wang | Concept Art"/>
   	<meta property="og:image" content="link"/>
   	<meta property="og:image:width" content="width"/>
   	<meta property="og:image:height" content="height"/>
-  	<meta property="og:url" content="https://github.com/aikoijin/portfolio.git"/>
+  	<meta property="og:url" content="https://aikoijin.github.io/portfolio/"/>
   	<meta property="og:site_name" content="Aikoijin Portfolio"/>
   	<meta property="og:type" content="website"/>
 </head>
@@ -35,8 +33,20 @@
 <body class ="wallpaper">
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
-        <div><a href="about.html">M I C H E L L E . W A N G</a></div>
-        <div><a href="mailto:michellewang3352@gmail.com">michellewang3352@gmail.com</a></div>
+		<div class = "header">
+		<div><a href="about.html" style="font-size: 35px; text-align: right;"><span>M I C H E L L E . W A N G</span></a></div>
+		<div><p>Illustrator&nbsp; &&nbsp; Concept Artist</p></div>
+        <div><a  id= "email" href="mailto:michellewang3352@gmail.com" style="text-align: right; ">michellewang3352@gmail.com</a></div>
+		</div>
+		<div id = "navbar">
+		<ul id = "navbar_links">
+		<li><a href="index.html" target="_self">CONCEPT ART</a></li>
+		<li><a href="illustration.html" target="_self">ILLUSTRATION</a></li>
+		<li><a href="animation.html" target="_self">ANIMATIONS</a></li>
+		<li><a href="3dmodeling.html" target="_self">3D MODELING</a></li>
+		<li><a href="about.html" target="_self">ABOUT</a></li>
+	</ul>
+		</div>
 	</main>
 </body>
 </html>
