--- a/illustration.html
+++ b/illustration.html
@@ -47,7 +47,7 @@
 	</header>
 
 	<main id="content">
-
+		<h1 style = "text-align: center;">Coming Soon</h1>
 	</main>
 
 	<div class = "spaceblock"></div>
