--- a/index.html
+++ b/index.html
@@ -47,12 +47,74 @@
 	</header>
 
 	<main id="content" >
+		<!-- GODSLAYERS -->
+		<div class = "grid-container">
+			<div class = "grid-item">
+				<h1 class = "gamenames" style = "font-size: 35px; margin:0px;">Godslayers</h1>
+				<p style = "font-size: 13px;">Jan 2023 - Present</p>
+				<p style = "font-size: 13px; margin-bottom:15px;">Co-Producer | Art Director | UI/UX | 2D Animator | Game Developer
+				</p>
+		
+				<p>Godslayers is a turn-based RPG about a party of heroes stuck in a never ending time loop against their story’s final boss. Uncover who the final boss is, why the time loop started in the first place, and the stories of your heroes. 
+					<br><br>The player controls the party and their actions as they fight. Learn how the boss reacts to them, and how they should react to the boss. With each phase of the boss fight, more information is revealed, the player gains access to more abilities, and both the party and the boss grow stronger.				
+				</p>
+				<br><hr style = "margin: 0px; margin-bottom: 20px;">
+				<a href = "https://henrybarrick.itch.io/godslayers-milestone-playtests" style = "text-decoration: underline;font-weight: bold;">Play Godslayers on Itch.io >></a>
+			</div>
+			<div class = "grid-item">
+				<div class = "slider">
+					<div class = "slide active">
+						<img src = "assets/images/Godslayers/Boss_CA.jpg" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/Boss_Animation.gif" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/BG_Animation.gif" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/Stats_UI.png" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/Gameplay_UI.gif" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/Title Screen_Cathedral.png" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/Title Screen_Constellations.png" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/Title Screen_Orbs.png" alt ="">
+					</div>
+		
+					<div class = "navigation">
+						<i class="fas fa-chevron-left prev-btn"><</i>
+						<i class="fas fa-chevron-right next-btn">></i>
+					</div>
+		
+					<div class = "navigation-visibility">
+						<div class = "slide-icon active"></div>
+						<div class = "slide-icon"></div>
+						<div class = "slide-icon"></div>
+						<div class = "slide-icon"></div>
+						<div class = "slide-icon"></div>
+						<div class = "slide-icon"></div>
+						<div class = "slide-icon"></div>
+						<div class = "slide-icon"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class = "spaceblock"></div>
+
 		<!-- SHABTI -->
 		<div class = "grid-container">
 			<div class = "grid-item">
-				<h1 class = "gamenames" style = "font-size: 35px;">Shabti</h1>
-				<p style = "font-size: 12px;">December 2023</p>
-				<p style = "font-size: 12px;">Concept Artist | Texture Artist | 2D Artist | UX/UI | Logo Design</p>
+				<h1 class = "gamenames" style = "font-size: 35px; margin:0px;">Shabti</h1>
+				<p style = "font-size: 13px;">December 2023</p>
+				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Texture Artist | 2D Artist | UX/UI | Logo Design</p>
 
 				<p>Shabti is an Egyptian survival-horror game, where you play as a young mummy that has been entombed in the pyramid and has awaken for unknown reasons and must find a way out to find the truth of your awakening.
 
@@ -123,9 +185,9 @@
 		<!-- STARSTRUCK -->
 		<div class = "grid-container">
 			<div class = "grid-item">
-				<h1 class = "gamenames" style = "font-size: 35px;">Starstruck</h1>
-				<p style = "font-size: 12px;">November 2023</p>
-				<p style = "font-size: 12px;">Concept Artist | Level Design Artist (3rd) | 2D Artist | Cinematics for Start/Ending Scenes
+				<h1 class = "gamenames" style = "font-size: 35px; margin:0px;">Starstruck</h1>
+				<p style = "font-size: 13px;">November 2023</p>
+				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Level Design Artist (3rd) | 2D Artist | Cinematics for Start/Ending Scenes
 				</p>
 
 				<p>Starstruck is a 2D verse-jumping platformer game that places the player into many parts of the universe to collect the 6 pieces of the star and reunite them to win the game.
@@ -192,9 +254,9 @@
 		<!-- 9-TALES -->
 		<div class = "grid-container">
 			<div class = "grid-item">
-				<h1 class = "gamenames" style = "font-size: 35px;">9-Tales</h1>
-				<p style = "font-size: 12px;">October 2023</p>
-				<p style = "font-size: 12px;">Concept Artist | Level Design Artist | 2D Artist | UI/UX | Sprite Artist | Game Developer
+				<h1 class = "gamenames" style = "font-size: 35px; margin:0px;">9-Tales</h1>
+				<p style = "font-size: 13px;">October 2023</p>
+				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Level Design Artist | 2D Artist | UI/UX | Sprite Artist | Game Developer
 				</p>
 
 				<p>9-Tales is a simple 2D platformer game based off of Yoko Ono's "Grapefruit: Beat Piece," particularly the directive to "listen to a heart beat,". The deliberate clunkiness of the game mechanics was not only unintentional but also served to intensify the experience, creating a palpable sense of adrenaline as players narrowly missed platforms or barely landed on them with just one foot, emphasizing the beating of the heart. I aimed to express the idea of perseverance and the fear of the unknown, encapsulated in the concept of having limited chances to reach a goal.
@@ -241,9 +303,9 @@
 		<!-- LEAGUE OF LEGENDS -->
 		<div class = "grid-container">
 			<div class = "grid-item">
-				<h1 class = "gamenames" style = "font-size: 35px;">League of Legends</h1>
-				<p style = "font-size: 12px;">est. 2021</p>
-				<p style = "font-size: 12px;">Concept Artist | Fanmade Art | 2D Artist | 3D Modeling
+				<h1 class = "gamenames" style = "font-size: 35px; margin:0px;">League of Legends</h1>
+				<p style = "font-size: 13px;">est. 2021</p>
+				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Fanmade Art | 2D Artist | 3D Modeling
 				</p>
 
 				<p>My favorite game is League of Legends as I have been an avid player of the game since 2016. I really love how there are a variety of champions that you can choose from and play since it doesn’t limit you to one choice and allows you to find the champion that suits your skill level and playstyle. I also love Riot’s semi-realism style and immaculate character development with each skinline referencing multiple cultural days and apparel. For example, Heavenscale is based on 2024: Year of the Dragon, La Illusion is based on Day of the Dead, Lunar New Year is based on Chinese New Year, Heartbreakers/Sweetheart is based on Valentine’s Day, Immortal Journey is based on xianxias/immortal heroes in Chinese fantasy,etc. By incorporating multiple skinlines based on different cultures, players feel a sense of belonging when they see their traditions being represented in skinlines for champions that they can play and associate themselves with.
