--- a/index.html
+++ b/index.html
@@ -116,11 +116,10 @@
 				<p style = "font-size: 13px;">December 2023</p>
 				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Texture Artist | 2D Artist | UX/UI | Logo Design</p>
 
-				<p>Shabti is an Egyptian survival-horror game, where you play as a young mummy that has been entombed in the pyramid and has awaken for unknown reasons and must find a way out to find the truth of your awakening.
-
-				<br><br> In the process of shaping the protagonist, I immersed myself in a thorough exploration of alien facial structures, guided by the endearing charm of League of Legends' Gnar. The challenge lay in capturing that cuteness and infusing an otherworldly essence into our character, a task that demanded meticulous research and creative finesse. To seamlessly integrate our creation into the game's environment, I dedicated extensive study to various Egyptian patterns, clothing styles, and intricate jewelry, aiming to achieve a harmonious and culturally resonant design.
-
-				<br><br> When it came to crafting the protagonist's weaponry, I delved deeper into historical contexts, seeking inspiration that would not only complement the character but also contribute to the game's overall narrative. The Scarab emerged as a recurring motif, meticulously integrated into the design, symbolizing both cultural significance and narrative depth. Bandages and a rugged, worn texture became integral elements, adding layers of authenticity and character history to the visual narrative.
+				<p>
+					In "Shabti," a 3D Egyptian-themed survival-horror, you step into the bandages of a small, newly reanimated mummy, desperately navigating a pyramid's labyrinthine corridors while evading relentless enemies with distinct behaviors. As you navigate the maze, solving puzzles and conserving your limited resources to keep your lantern burning, a chilling revelation awaits upon reaching freedom.
+				<br><br>
+				As the mummy explores the pyramid's depths, it encounters various foes with distinct behaviors and strategies to impede its progress. Some creatures may lurk in the shadows, waiting for the opportune moment to strike, while others may patrol predetermined routes, forcing the player to carefully time their movements to avoid detection. Meanwhile, the mummy must utilize its wits to solve intricate puzzles scattered throughout the pyramid, each puzzle unlocking a new passage or revealing vital clues to aid in its escape. With tension mounting with each passing moment, players must balance stealth, strategy, and problem-solving skills to overcome the myriad challenges and ultimately unravel the mystery behind their entombment.
 				</p>
 				<br><hr style = "margin: 0px; margin-bottom: 20px;">
 				<a href = "https://jodortiz.itch.io/shabti" style = "text-decoration: underline;font-weight: bold;">Play Shabti on Itch.io >></a>
@@ -190,12 +189,8 @@
 				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Level Design Artist (3rd) | 2D Artist | Cinematics for Start/Ending Scenes
 				</p>
 
-				<p>Starstruck is a 2D verse-jumping platformer game that places the player into many parts of the universe to collect the 6 pieces of the star and reunite them to win the game.
-
-				<br><br> In my work, I drew inspiration from League of Legends' champion designs particularly Yone & Yasuo and incorporated it into the character design. My love for Chinese clothing and architecture was my core inspiration for my level design and character cohesiveness that I decided on. I did multiple research on Chinese buildings and tried to grasp their elegant yet bold curved roofs, and glass windows along with the red columns.
-				
-				<br><br> In my level design I played with the idea of parkour and roof running as my core gameplay. I wanted to do wall jumping but time did not allow it so I opted for a platform jumping to mimic the action of wall jumping in my game. I was trying to express with my choices of level/design a feeling of nostalgia similar to the Subway Surfer type of gameplay where you run on trains but mix it in with more of my culture (as a Chinese American myself). In a way, I also wanted the player to also be captivated by the artwork and less on the difficulty of reaching the star.
-				</p>
+				<p>Embark on an interstellar odyssey in Starstruck, a visually stunning 2D platformer where players traverse diverse realms within the universe to retrieve the scattered fragments of the vital Polaris star. As each character's distinct design influences the aesthetic of their world, prepare for a challenging journey filled with visually captivating landscapes and hair-raising obstacles, reminiscent of the unforgiving difficulty found in indie classics like the "World's Hardest Game."			
+			</p>
 				<br><hr style = "margin: 0px; margin-bottom: 20px;">
 				<a href = "https://coldsteel503.itch.io/starstruck" style = "text-decoration: underline;font-weight: bold;">Play Starstruck on Itch.io >></a>
 			</div>
@@ -259,8 +254,8 @@
 				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Level Design Artist | 2D Artist | UI/UX | Sprite Artist | Game Developer
 				</p>
 
-				<p>9-Tales is a simple 2D platformer game based off of Yoko Ono's "Grapefruit: Beat Piece," particularly the directive to "listen to a heart beat,". The deliberate clunkiness of the game mechanics was not only unintentional but also served to intensify the experience, creating a palpable sense of adrenaline as players narrowly missed platforms or barely landed on them with just one foot, emphasizing the beating of the heart. I aimed to express the idea of perseverance and the fear of the unknown, encapsulated in the concept of having limited chances to reach a goal.
-				</p>
+				<p>In "9-Tales," part of an anthology of games, players take on the role of Yuki, a kemonomimi, navigating through a perilous 2D platformer, inspired by Yoko Ono’s Grapefruit, BEAT PIECE, evoking the feeling of a racing heartbeat through clunky mechanics and moving platforms. As the player maneuvers through tunnels with logs and over large bodies of water, they experience the tension of nine lives at stake, with relief flooding in upon reaching the victory screen.
+				</p>				
 				<br><hr style = "margin: 0px; margin-bottom: 20px;">
 				<a href = "https://aikoijin.itch.io/9-tales" style = "text-decoration: underline;font-weight: bold;">Play 9-Tales on Itch.io >></a>
 			</div>
