--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
 			<div class = "grid-item">
 				<div class = "slider">
 					<div class = "slide active">
-						<img src = "assets/images/Godslayers/Boss_CA.jpg" alt ="">
+						<img src = "assets/images/Godslayers/Title Screen.png" alt ="">
 					</div>
 					<div class = "slide">
 						<img src = "assets/images/Godslayers/Boss_Animation.gif" alt ="">
 					</div>
 					<div class = "slide">
+						<img src = "assets/images/Godslayers/BossBasicAttack.gif" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/BossSkill2.gif" alt ="">
+					</div>
+					<div class = "slide">
+						<img src = "assets/images/Godslayers/BossSkill3.gif" alt ="">
+					</div>
+					<div class = "slide">
 						<img src = "assets/images/Godslayers/BG_Animation.gif" alt ="">
 					</div>
 					<div class = "slide">
+						<img src = "assets/images/Godslayers/Boss_CA.jpg" alt ="">
+					</div>
+					<div class = "slide">
 						<img src = "assets/images/Godslayers/Stats_UI.png" alt ="">
-					</div>
-					<div class = "slide">
-						<img src = "assets/images/Godslayers/Gameplay_UI.gif" alt ="">
-					</div>
-					<div class = "slide">
-						<img src = "assets/images/Godslayers/Title Screen_Cathedral.png" alt ="">
-					</div>
-					<div class = "slide">
-						<img src = "assets/images/Godslayers/Title Screen_Constellations.png" alt ="">
-					</div>
-					<div class = "slide">
-						<img src = "assets/images/Godslayers/Title Screen_Orbs.png" alt ="">
 					</div>
 		
 					<div class = "navigation">
