--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 					  visual representation and design as a universal language. <br><br></span>
 		  
 					  <span class = "box">I used to want to be a fashion designer, but I discovered a new passion for games after playing popular titles
-					  like League of Legends and Genshin Impact in 2017. I decided to combine my five years of fashion design experience
+					  like League of Legends in 2017 and Genshin Impact in 2020. I decided to combine my five years of fashion design experience
 					  with my love of gaming, and found the perfect balance in game art with a focus on character and concept art.</span></p></div>
 				</div>
 			<div class="about-item">
