--- a/3dmodeling.html
+++ b/3dmodeling.html
@@ -33,15 +33,15 @@
 			<div><a href="about.html" style="font-size: 35px; text-align: right;"><span>M I C H E L L E . W A N G</span></a></div>
 			<div><p>Illustrator&nbsp; &&nbsp; Concept Artist</p></div>
 			<div><a  id= "email" href="mailto:michellewang3352@gmail.com" style="text-align: right; ">michellewang3352@gmail.com</a></div>
-			</div>
+		</div>
 	
-			<div id = "navbar">
+		<div id = "navbar">
 			<ul id = "navbar_links">
-			<li><a href="index.html" target="_self">CONCEPT ART</a></li>
-			<li><a href="illustration.html" target="_self">ILLUSTRATION</a></li>
-			<li><a href="animation.html" target="_self">ANIMATIONS</a></li>
-			<li><a href="3dmodeling.html" target="_self">3D MODELING</a></li>
-			<li><a href="about.html" target="_self">ABOUT</a></li>
+			<li><a href="index.html">CONCEPT ART</a></li>
+			<li><a href="illustration.html">ILLUSTRATION</a></li>
+			<li><a href="animation.html">ANIMATIONS</a></li>
+			<li><a href="3dmodeling.html"  class = "active">3D MODELING</a></li>
+			<li><a href="about.html">ABOUT</a></li>
 			</ul>
 		</div>	
 	</header>
