--- a/about.html
+++ b/about.html
@@ -33,22 +33,22 @@
 			<div><a href="about.html" style="font-size: 35px; text-align: right;"><span>M I C H E L L E . W A N G</span></a></div>
 			<div><p>Illustrator&nbsp; &&nbsp; Concept Artist</p></div>
 			<div><a  id= "email" href="mailto:michellewang3352@gmail.com" style="text-align: right; ">michellewang3352@gmail.com</a></div>
-			</div>
+		</div>
 	
-			<div id = "navbar">
+		<div id = "navbar">
 			<ul id = "navbar_links">
-			<li><a href="index.html" target="_self">CONCEPT ART</a></li>
-			<li><a href="illustration.html" target="_self">ILLUSTRATION</a></li>
-			<li><a href="animation.html" target="_self">ANIMATIONS</a></li>
-			<li><a href="3dmodeling.html" target="_self">3D MODELING</a></li>
-			<li><a href="about.html" target="_self">ABOUT</a></li>
+			<li><a href="index.html">CONCEPT ART</a></li>
+			<li><a href="illustration.html">ILLUSTRATION</a></li>
+			<li><a href="animation.html">ANIMATIONS</a></li>
+			<li><a href="3dmodeling.html">3D MODELING</a></li>
+			<li><a href="about.html"  class = "active">ABOUT</a></li>
 			</ul>
 		</div>	
 	</header>
 
 	<main id="content">
 		<div class="about-container">
-			<div class="about-item"><img class = "portrait" src="assets/images/pfp.png" alt="Artist Portrait" style="width:350px;height:350px;object-fit:cover;"></div>
+			<div class="about-item"><img class = "portrait" src="assets/images/pfp.png" alt="Artist Portrait" style="width:300px;height:300px;object-fit:cover;"></div>
 			<div class="about-item">
 				<div class = "container">
 				<span class = "box"><h1>Hello there !</h1></span>
@@ -79,7 +79,7 @@
 		</div>
 	</main>
 
-	<div class = "spaceblock"></div>
+	<div class = "spaceblock2"></div>
 
 	<footer>
 		<hr>
