--- a/illustration.html
+++ b/illustration.html
@@ -10,6 +10,8 @@
 	<link rel="apple-touch-icon" type="image/png"  href="assets/images/icon2.png" />
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="assets/css/site.css">
+	<!-- Include a page specific CSS file for consistent styling across the site -->
+	<link rel="stylesheet" type="text/css" href="assets/css/illustration.css">
 	<!-- Link to javascript file - DEFER waits until all elements are rendered deleted from template: type="text/javascript" -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" intergrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<!-- This title is used for tabs and bookmarks -->
@@ -24,30 +26,42 @@
   	<meta property="og:url" content="https://aikoijin.github.io/portfolio/"/>
   	<meta property="og:site_name" content="Aikoijin Portfolio"/>
   	<meta property="og:type" content="website"/>
+	<script src="assets/js/script.js"></script>
 </head>
 
-<body>
+<body onload="getPics()">
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<header>
 		<div class = "header">
 			<div><a href="about.html" style="font-size: 35px; text-align: right;"><span>M I C H E L L E . W A N G</span></a></div>
 			<div><p>Illustrator&nbsp; &&nbsp; Concept Artist</p></div>
 			<div><a  id= "email" href="mailto:michellewang3352@gmail.com" style="text-align: right; ">michellewang3352@gmail.com</a></div>
-			</div>
+		</div>
 	
-			<div id = "navbar">
+		<div id = "navbar">
 			<ul id = "navbar_links">
-			<li><a href="index.html" target="_self">CONCEPT ART</a></li>
-			<li><a href="illustration.html" target="_self">ILLUSTRATION</a></li>
-			<li><a href="animation.html" target="_self">ANIMATIONS</a></li>
-			<li><a href="3dmodeling.html" target="_self">3D MODELING</a></li>
-			<li><a href="about.html" target="_self">ABOUT</a></li>
+			<li><a href="index.html">CONCEPT ART</a></li>
+			<li><a href="illustration.html" class = "active">ILLUSTRATION</a></li>
+			<li><a href="animation.html">ANIMATIONS</a></li>
+			<li><a href="3dmodeling.html">3D MODELING</a></li>
+			<li><a href="about.html">ABOUT</a></li>
 			</ul>
 		</div>	
 	</header>
 
 	<main id="content">
-		<h1 style = "text-align: center;">Coming Soon</h1>
+		<div class = "gallery">
+			<img src="assets/images/Illustration/Teemo_SBCollab.png">
+			<img src="assets/images/Illustration/HS Yone.png">
+			<img src="assets/images/Illustration/Rakan_CSP.png">
+			<img src="assets/images/Illustration/Lovev2.png">
+			<img src="assets/images/Illustration/Kosuke.png">
+			<img src="assets/images/Illustration/ayla.png">
+			<img src="assets/images/Illustration/BarbieMeme.jpg">
+			<img src="assets/images/Illustration/BdayComm.png">
+			<img src="assets/images/Illustration/FinalLevel.png">
+			<img src="assets/images/Illustration/centaur.png">
+		</div>
 	</main>
 
 	<div class = "spaceblock"></div>
