--- a/3dmodeling.html
+++ b/3dmodeling.html
@@ -10,6 +10,8 @@
 	<link rel="apple-touch-icon" type="image/png"  href="assets/images/icon2.png" />
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="assets/css/site.css">
+	<!-- Include a page specific CSS file for consistent styling across the site -->
+	<link rel="stylesheet" type="text/css" href="assets/css/3d.css">
 	<!-- Link to javascript file - DEFER waits until all elements are rendered deleted from template: type="text/javascript" -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" intergrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<!-- This title is used for tabs and bookmarks -->
