--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</div>
 
 		<!-- GODSLAYERS -->
-		<section><div class = "grid-container">
+		<div class = "grid-container">
 			<div class = "grid-item">
 				<a id = "Godslayers"><h1 class = "gamenames" style = "font-size: 35px; margin:0px;">Godslayers</h1></a>				<p style = "font-size: 13px;">Jan 2023 - Present</p>
 				<p style = "font-size: 13px; margin-bottom:15px;">Co-Producer | Art Director | UI/UX | 2D Animator | Game Developer
@@ -117,12 +117,12 @@
 					</div>
 				</div>
 			<!-- </div> -->
-		</div></section>
+		</div>
 
 		<div class = "spaceblock"></div>
 
 		<!-- SHABTI -->
-		<section><div class = "grid-container">
+		<div class = "grid-container">
 			<div class = "grid-item">
 				<a id= "Shabti"><h1 class = "gamenames" style = "font-size: 35px; margin-bottom:0px;">Shabti</h1></a>
 				<p style = "font-size: 13px;">December 2023</p>
@@ -189,7 +189,7 @@
 				</div>
 			</div>
 		</div>
-		</div></section>
+		</div>
 
 		<div class = "spaceblock"></div>
 
