--- a/president/index.html
+++ b/president/index.html
@@ -50,7 +50,7 @@
             </div>
 
 			<div class="output">
-        <button> <a href = "">Click Here!</a></button>
+        <button> <a href = "LINK HERE">Click Here!</a></button>
       </div>
         </section>
     </main>
