--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
 			<ul id = "navbar_links">
 			<li><a href="index.html">CONCEPT ART</a></li>
 			<li><a href="illustration.html">ILLUSTRATION</a></li>
-			<li><a href="animation.html">ANIMATIONS</a></li>
-			<li><a href="3dmodeling.html">3D MODELING</a></li>
+			<!-- <li><a href="animation.html">ANIMATIONS</a></li>
+			<li><a href="3dmodeling.html">3D MODELING</a></li> -->
 			<li><a href="about.html"  class = "active">ABOUT</a></li>
 			</ul>
 		</div>	
