--- a/illustration.html
+++ b/illustration.html
@@ -42,8 +42,8 @@
 			<ul id = "navbar_links">
 			<li><a href="index.html">CONCEPT ART</a></li>
 			<li><a href="illustration.html" class = "active">ILLUSTRATION</a></li>
-			<li><a href="animation.html">ANIMATIONS</a></li>
-			<li><a href="3dmodeling.html">3D MODELING</a></li>
+			<!-- <li><a href="animation.html">ANIMATIONS</a></li>
+			<li><a href="3dmodeling.html">3D MODELING</a></li> -->
 			<li><a href="about.html">ABOUT</a></li>
 			</ul>
 		</div>	
@@ -52,32 +52,32 @@
 	<main id="content">
 		<div class="row">
 			<div class="column">
-			<img src="assets/images/Illustration/Teemo_SBCollab.png">
-			<img src="assets/images/Illustration/HS Yone.png">
-			<img src="assets/images/Illustration/ConceptSketches.jpg">
-			<img src="assets/images/Illustration/BdayComm.png">
-
-			
-			</div>
-			<div class="column">
 			<img src="assets/images/Illustration/Rakan_CSP.png">
-			<img src="assets/images/Illustration/Lovev2.png">
-			<img src="assets/images/Illustration/Kosuke.png">
-			<img src="assets/images/Illustration/ayla.png">
+			<img src="assets/images/Illustration/GabePortrait.png">
+			<img src="assets/images/Illustration/Character Sheet PIXAR80.png">
+			<img src="assets/images/Illustration/ConceptSketches.jpg">
+
 			
 			</div>
 			<div class="column">
-			<img src="assets/images/Illustration/HS Yone.png">
 			<img src="assets/images/Illustration/BarbieMeme.jpg">
-			<img src="assets/images/Illustration/jett.jpg">
+			<img src="assets/images/Illustration/realism.png">
+			<img src="assets/images/Illustration/ayla.png">
+			<!-- <img src="assets/images/Illustration/"> -->
+			
+			</div>
+			<div class="column">
 			<img src="assets/images/Illustration/yuumihand.png">
+			<img src="assets/images/Illustration/furry.jpg">
+			<img src="assets/images/Illustration/Theater.png">
+			<!-- <img src="assets/images/Illustration/"> -->
 
 			</div>
 			<div class="column">
-			<img src="assets/images/Illustration/centaur.png">
-			<img src="assets/images/Illustration/Poro_Xayah_Rakan.png">
-			<img src="assets/images/Illustration/pink.jpg">
-			<img src="assets/images/Illustration/FinalLevel.png">
+			<img src="assets/images/Illustration/AikoijinxNami.png">
+			<img src="assets/images/Illustration/Lovev2.png">
+			<!-- <img src="assets/images/Illustration/">
+			<img src="assets/images/Illustration/"> -->
 			
 			</div>
 		</div>
