--- a/illustration.html
+++ b/illustration.html
@@ -54,13 +54,13 @@
 			<div class="column">
 			<img src="assets/images/Illustration/Rakan_CSP.png">
 			<img src="assets/images/Illustration/GabePortrait.png">
-			<img src="assets/images/Illustration/Character Sheet PIXAR80.png">
-			<img src="assets/images/Illustration/ConceptSketches.jpg">
+			<img src="assets/images/Illustration/BarbieMeme.jpg">
+			<!-- <img src="assets/images/Illustration/"> -->
 
 			
 			</div>
 			<div class="column">
-			<img src="assets/images/Illustration/BarbieMeme.jpg">
+			<img src="assets/images/Illustration/ConceptSketches.jpg">
 			<img src="assets/images/Illustration/realism.png">
 			<img src="assets/images/Illustration/ayla.png">
 			<!-- <img src="assets/images/Illustration/"> -->
