--- a/illustration.html
+++ b/illustration.html
@@ -52,63 +52,62 @@
 	<main id="content">
 		<div class="row">
 			<div class="column">
-			<img src="assets/images/Illustration/Rakan_CSP.png">
-			<img src="assets/images/Illustration/GabePortrait.png">
-			<img src="assets/images/Illustration/BarbieMeme.jpg">
+			<img src="assets/images/Illustration/Rakan_CSP.png" loading = "lazy" alt = "-">
+			<img src="assets/images/Illustration/GabePortrait.png" loading = "lazy" alt = "-">
+			<img src="assets/images/Illustration/BarbieMeme.jpg" loading = "lazy" alt = "-">
 			<!-- <img src="assets/images/Illustration/"> -->
 
 			
 			</div>
 			<div class="column">
-			<img src="assets/images/Illustration/ConceptSketches.jpg">
-			<img src="assets/images/Illustration/realism.png">
-			<img src="assets/images/Illustration/ayla.png">
+			<img src="assets/images/Illustration/ConceptSketches.jpg" loading = "lazy" alt = "-">
+			<img src="assets/images/Illustration/realism.png" loading = "lazy" alt = "-">
+			<img src="assets/images/Illustration/ayla.png" loading = "lazy" alt = "-">
 			<!-- <img src="assets/images/Illustration/"> -->
 			
 			</div>
 			<div class="column">
-			<img src="assets/images/Illustration/yuumihand.png">
-			<img src="assets/images/Illustration/furry.jpg">
-			<img src="assets/images/Illustration/Theater.png">
+			<img src="assets/images/Illustration/yuumihand.png" loading = "lazy" alt = "-">
+			<img src="assets/images/Illustration/furry.jpg" loading = "lazy" alt = "-">
+			<img src="assets/images/Illustration/Theater.png" loading = "lazy" alt = "-">
 			<!-- <img src="assets/images/Illustration/"> -->
 
 			</div>
 			<div class="column">
-			<img src="assets/images/Illustration/AikoijinxNami.png">
-			<img src="assets/images/Illustration/Lovev2.png">
+			<img src="assets/images/Illustration/AikoijinxNami.png" loading = "lazy" alt = "-">
+			<img src="assets/images/Illustration/Lovev2.png" loading = "lazy" alt = "-">
 			<!-- <img src="assets/images/Illustration/">
 			<img src="assets/images/Illustration/"> -->
 			
 			</div>
 		</div>
 		<a href = "#Top" id = "btt"><button><img src="assets/images/BacktoTopIcon.png"></button></a>
+		<div id="imageOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:1000;">
+			<div id="overlayContent" style="display:flex; height:100%; align-items:center; justify-content:center; padding:20px;">
+				<img id="fullSizeImage" src="" style="max-width:80%; max-height:100%; margin-right:20px;">
+				<div id="imageCaption" style="color:white; max-width:20%;"></div>
+			</div>
+		</div>
+
 		<script>
-			document.addEventListener('DOMContentLoaded', function () {
-				document.querySelectorAll('.row img').forEach(img => {
-					img.addEventListener('click', function () {
-						// If the image is already in full size, shrink it back to original
-						if (this.classList.contains('full-size')) {
-							this.classList.remove('full-size');
-							this.style.position = 'static';
-							this.style.width = '100%'; // Reset width to original
-							this.style.height = 'auto'; // Reset height to auto
-						} else {
-							// Make the image full size
-							this.classList.add('full-size');
-							this.style.position = 'fixed';
-							this.style.left = '0';
-							this.style.top = '0';
-							this.style.width = '100vw';
-							this.style.height = '100vh';
-							this.style.objectFit = 'contain';
-							this.style.backgroundColor = 'black';
-							this.style.cursor = 'pointer';
-						}
-					});
-				});
-			});
+document.addEventListener('DOMContentLoaded', function () {
+    document.querySelectorAll('.row img').forEach(img => {
+        img.addEventListener('click', function () {
+            // Set the src for the full-size image and caption in the overlay
+            document.getElementById('fullSizeImage').src = img.src; // Use img.getAttribute('data-fullsize-src') if you have a higher resolution version
+            document.getElementById('imageCaption').textContent = img.alt; // Assuming you use the alt text as the caption
+
+            // Show the overlay
+            document.getElementById('imageOverlay').style.display = 'flex';
+        });
+    });
+
+    // Close the overlay when clicked
+    document.getElementById('imageOverlay').addEventListener('click', function () {
+        this.style.display = 'none';
+    });
+});
 			</script>
-			
 	</main>
 
 	<div class = "spaceblock2"></div>
