--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 			<div class="about-item">
 				<div class = "container">
 				<span class = "box"><h1>Hello there !</h1></span>
-					  <span class = "box"><p>I'm Michelle, a Los Angeles based concept artist and illustrator, currently working on Godslayers at UC Santa Cruz! <br><br></span>
+					  <span class = "box"><p>I'm Michelle, a Los Angeles based concept artist and illustrator, currently working on Amusia at UC Santa Cruz! <br><br></span>
 		   
 					  <span class = "box">I draw inspiration from Chinese architecture and patterns, techwear, and anime and semi-realism art styles. 
 					  My goal is to make illustrations and character designs that connect with players around the world, using 
