--- a/illustration.html
+++ b/illustration.html
@@ -82,31 +82,32 @@
 			</div>
 		</div>
 		<a href = "#Top" id = "btt"><button><img src="assets/images/BacktoTopIcon.png"></button></a>
-		<div id="imageOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:1000;">
-			<div id="overlayContent" style="display:flex; height:100%; align-items:center; justify-content:center; padding:20px;">
-				<img id="fullSizeImage" src="" style="max-width:80%; max-height:100%; margin-right:20px;">
-				<div id="imageCaption" style="color:white; max-width:20%;"></div>
-			</div>
-		</div>
 
 		<script>
-document.addEventListener('DOMContentLoaded', function () {
-    document.querySelectorAll('.row img').forEach(img => {
-        img.addEventListener('click', function () {
-            // Set the src for the full-size image and caption in the overlay
-            document.getElementById('fullSizeImage').src = img.src; // Use img.getAttribute('data-fullsize-src') if you have a higher resolution version
-            document.getElementById('imageCaption').textContent = img.alt; // Assuming you use the alt text as the caption
-
-            // Show the overlay
-            document.getElementById('imageOverlay').style.display = 'flex';
-        });
-    });
-
-    // Close the overlay when clicked
-    document.getElementById('imageOverlay').addEventListener('click', function () {
-        this.style.display = 'none';
-    });
-});
+			document.addEventListener('DOMContentLoaded', function () {
+				document.querySelectorAll('.row img').forEach(img => {
+					img.addEventListener('click', function () {
+						// If the image is already in full size, shrink it back to original
+						if (this.classList.contains('full-size')) {
+							this.classList.remove('full-size');
+							this.style.position = 'static';
+							this.style.width = '100%'; // Reset width to original
+							this.style.height = 'auto'; // Reset height to auto
+						} else {
+							// Make the image full size
+							this.classList.add('full-size');
+							this.style.position = 'fixed';
+							this.style.left = '0';
+							this.style.top = '0';
+							this.style.width = '100vw';
+							this.style.height = '100vh';
+							this.style.objectFit = 'contain';
+							this.style.backgroundColor = 'black';
+							this.style.cursor = 'pointer';
+						}
+					});
+				});
+			});
 			</script>
 	</main>
 
