--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                 <div class="grid-item"><a href="https://www.instagram.com/aikoijin/" target=”_blank”><button class = "buttonlinks">Like my art</button></a><br /></div>
                 <div class="grid-item"><img src="assets/images/twitter.png" height = "30px" width = "30px" alt="Twitter"></div>
                 <div class="grid-item"><a href="https://twitter.com/aikoijin" target=”_blank”><button class = "buttonlinks">Follow me</button></a><br /></div>
-                <div class="grid-item"><img src="https://static.wixstatic.com/media/8d13be_e03661a5efea4a7ab7e068fe695cccde.gif" alt="Resume" width="30" height="30"></div>
-                <div class="grid-item"><a href="assets/images/resume.pdf" target=”_blank”><button class = "resumelink">Resume</button></a><br /></div>
+                <!-- <div class="grid-item"><img src="https://static.wixstatic.com/media/8d13be_e03661a5efea4a7ab7e068fe695cccde.gif" alt="Resume" width="30" height="30"></div>
+                <div class="grid-item"><a href="assets/images/resume.pdf" target=”_blank”><button class = "resumelink">Resume</button></a><br /></div> -->
             </div>
 			</div>   
 		</div>
