--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				<li><a href="#League"><i>League of Legends</i></a></li>
 				<li><a href="#Godslayers"><i>Godslayers</i></a></li>
 				<li><a href="#Shabti"><i>Shabti</i></a></li>
-				<li><a href="#Starstruck"><i>Starstruck</i></a></li>
-				<li><a href="#9Tales"><i>9-Tales</i></a></li>
+				<!-- <li><a href="#Starstruck"><i>Starstruck</i></a></li>
+				<li><a href="#9Tales"><i>9-Tales</i></a></li> -->
 				
 			</ul>
 		</div>
@@ -165,7 +165,7 @@
 				</div>
 		<div class = "spaceblock"></div>
 
-		<!-- STARSTRUCK -->
+		<!-- STARSTRUCK
 				<a id = "Starstruck"><h1 class = "gamenames" style = "font-size: 35px; margin:0px;">Starstruck</h1></a>
 				<p style = "font-size: 13px;">November 2023</p>
 				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Level Design Artist (3rd) | 2D Artist | Cinematics for Start/Ending Scenes
@@ -195,7 +195,7 @@
 				</div>
 		<div class = "spaceblock"></div>
 
-		<!-- 9-TALES -->
+		9-TALES
 				<a id ="9Tales"><h1 class = "gamenames" style = "font-size: 35px; margin:0px;">9-Tales</h1></a>
 				<p style = "font-size: 13px;">October 2023</p>
 				<p style = "font-size: 13px; margin-bottom:15px;">Concept Artist | Level Design Artist | 2D Artist | UI/UX | Sprite Artist | Game Developer
@@ -219,10 +219,10 @@
 					
 					</div>
 					<div class="column">
-					<!-- <img src="assets/images/9Tales/5.png"> -->
+					<!-- <img src="assets/images/9Tales/5.png"> 
 					</div>
 				</div>
-				</div>
+				</div>-->
 
 		<a href = "#Top" id = "btt"><button><img src="assets/images/BacktoTopIcon.png"></button></a>
 
