--- a/illustration.html
+++ b/illustration.html
@@ -54,7 +54,7 @@
 			<div class="column">
 			<img src="assets/images/Illustration/Rakan_CSP.png" loading = "lazy" alt = "-">
 			<img src="assets/images/Illustration/GabePortrait.png" loading = "lazy" alt = "-">
-			<img src="assets/images/Illustration/BarbieMeme.jpg" loading = "lazy" alt = "-">
+			<img src="assets/images/Starstruck/1.gif" loading = "lazy" alt = "-">
 			<!-- <img src="assets/images/Illustration/"> -->
 
 			
