--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<br><br>The player controls the party and their actions as they fight. Learn how the boss reacts to them, and how they should react to the boss. With each phase of the boss fight, more information is revealed, the player gains access to more abilities, and both the party and the boss grow stronger.				
 				</p>
 				<br><hr style = "margin: 0px; margin-bottom: 20px;">
-				<a href = "https://henrybarrick.itch.io/godslayers-milestone-playtests" style = "text-decoration: underline;font-weight: bold;" target="_blank">Play Godslayers on Itch.io >></a>	
+				<a href = "https://henrybarrick.itch.io/godslayers-milestone-playtests" style = "text-decoration: underline;font-weight: bold;" target="_blank">Play Godslayers on Itch.io (Password: 172)>></a>	
 			<br>
 				<div id="contentimages">
 				<div class="row">
